--- a/Sample.Hosted/Pages/Shared/_SidebarFull.cshtml
+++ b/Sample.Hosted/Pages/Shared/_SidebarFull.cshtml
@@ -1,52 +1,45 @@
-@using DRN.Framework.Utils.Scope
-<div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="width: 200px;">
-  <a href="@PageFor.Root.Home" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-    <svg class="bi pe-none me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-    <span class="fs-4">Sidebar</span>
-  </a>
-  <hr>
-  <ul class="nav nav-pills flex-column mb-auto">
+<div class="d-flex flex-column" style="max-width: 200px;">
+  <ul class="nav nav-pills nav-flush flex-column mb-auto">
     <li class="nav-item">
-      <a href="@PageFor.Root.Home" class="nav-link active" aria-current="page">
-        <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#home"/></svg>
+      <a href="@PageFor.Root.Home" class="nav-link d-flex align-items-center py-3 border-bottom border-top rounded-0" active-page="@PageFor.Root.Home" aria-current="page">
+        <svg class="bi pe-none me-2" width="24" height="24"><use xlink:href="#home"/></svg>
         Home
       </a>
     </li>
     <li>
-      <a href="#" class="nav-link link-body-emphasis">
-        <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
+      <a href="#" class="nav-link d-flex align-items-center py-3 border-bottom rounded-0">
+        <svg class="bi pe-none me-2" width="24" height="24"><use xlink:href="#speedometer2"/></svg>
         Dashboard
       </a>
     </li>
     <li>
-      <a href="#" class="nav-link link-body-emphasis">
-        <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#table"/></svg>
+      <a href="#" class="nav-link d-flex align-items-center py-3 border-bottom rounded-0">
+        <svg class="bi pe-none me-2" width="24" height="24"><use xlink:href="#table"/></svg>
         Orders
       </a>
     </li>
     <li>
-      <a href="#" class="nav-link link-body-emphasis">
-        <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#grid"/></svg>
+      <a href="#" class="nav-link d-flex align-items-center py-3 border-bottom rounded-0">
+        <svg class="bi pe-none me-2" width="24" height="24"><use xlink:href="#grid"/></svg>
         Products
       </a>
     </li>
     <li>
-      <a href="#" class="nav-link link-body-emphasis">
-        <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
+      <a href="#" class="nav-link d-flex align-items-center py-3 border-bottom rounded-0">
+        <svg class="bi pe-none me-2" width="24" height="24"><use xlink:href="#people-circle"/></svg>
         Customers
       </a>
     </li>
   </ul>
-  <hr>
-  <div class="dropdown">
+  <hr/>
+  <div class="dropdown dropup">
     <a href="#" class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-      <profile-picture class="rounded-circle me-2" width="48" height="48"/>
-      <strong>DRN</strong>
+      <h4 class="bi bi-gear-fill">&nbsp;Settings</h4>
     </a>
     <ul class="dropdown-menu text-small shadow">
       <li><a class="dropdown-item" href="#">New project...</a></li>
       <li><a class="dropdown-item" href="#">Settings</a></li>
-      <li><a class="dropdown-item" href="@PageFor.User.Profile">Profile</a></li>
+      <li><a class="dropdown-item" href="@PageFor.User.Profile">My Profile</a></li>
       <li><hr class="dropdown-divider"></li>
       <li><a class="dropdown-item" href="@PageFor.User.Logout">Log out</a></li>
     </ul>
