--- a/Sample.Hosted/Pages/Shared/_Layout.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Layout.cshtml
@@ -11,11 +11,13 @@ https://getbootstrap.com/docs/5.3/examples/sidebars/
     <title>@ViewData["Title"] - @ScopeContext.Settings.ApplicationName</title>
 
     @*https://icons.getbootstrap.com/#usage*@
-    <link rel="icon" type="image/x-icon" href="/images/100.jpeg">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" integrity="sha256-9kPW/n5nn53j4WMRYAxe9c1rCY96Oogo/MKSVdKzPmI="
-          crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="icon" type="image/x-icon" href="/images/100.jpeg"/>
+    <link rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"/>
+    <link rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer"
+          href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+          integrity="sha256-9kPW/n5nn53j4WMRYAxe9c1rCY96Oogo/MKSVdKzPmI="/>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="~/css/site.css?v=@DateTime.Now.Ticks"/>
     <link rel="stylesheet" href="~/css/sidebars.css?v=@DateTime.Now.Ticks"/>
@@ -58,8 +60,9 @@ https://getbootstrap.com/docs/5.3/examples/sidebars/
 
 <partial name="_Footer"/>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"
-        referrerpolicy="no-referrer"></script>
+<script crossorigin="anonymous" referrerpolicy="no-referrer"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"></script>
 
 @await RenderSectionAsync("Scripts", required: false)
 </body>
