--- a/Sample.Hosted/Pages/_ViewImports.cshtml
+++ b/Sample.Hosted/Pages/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using DRN.Framework.Utils.Scope
 @using Sample.Hosted.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, DRN.Framework.Hosting
 @addTagHelper *, Sample.Hosted
