SubNavigation added + ViewDataFor Added

--- a/Sample.Hosted/Pages/Home.cshtml
+++ b/Sample.Hosted/Pages/Home.cshtml
@@ -2,8 +2,8 @@
 @model Sample.Hosted.Pages.Home
 
 @{
-    ViewData["Title"] = "Home Page";
-    ViewData["CenterVertically"] = true;
+    ViewData[ViewDataFor.Title] = "Home Page";
+    ViewData[ViewDataFor.CenterVertically] = true;
 }
 
 <div class="row justify-content-center text-center">
