--- a/Sample.Hosted/Pages/User/ProfilePicture.cshtml
+++ b/Sample.Hosted/Pages/User/ProfilePicture.cshtml
@@ -1,9 +1,8 @@
 @page
-@using Microsoft.AspNetCore.Mvc.TagHelpers
 @using Sample.Hosted.TagHelpers
 @model Sample.Hosted.Pages.User.ProfilePictureModel
 @{
-ViewData["Title"] = "Profile Picture";
+    ViewData[ViewDataFor.Title] = "Profile Picture";
 }
 
 <h2>Change Profile Picture</h2>
