--- a/Sample.Hosted/Pages/User/Register.cshtml
+++ b/Sample.Hosted/Pages/User/Register.cshtml
@@ -2,8 +2,8 @@
 @model Sample.Hosted.Pages.User.RegisterModel
 
 @{
-    ViewData["Title"] = "Register";
-    ViewData["CenterVertically"] = true;
+    ViewData[ViewDataFor.Title] = "Register";
+    ViewData[ViewDataFor.CenterVertically] = true;
 }
 
 <div class="row justify-content-center">
