--- a/Sample.Hosted/Pages/User/ProfileEdit.cshtml
+++ b/Sample.Hosted/Pages/User/ProfileEdit.cshtml
@@ -1,7 +1,7 @@
 @page
 @model Sample.Hosted.Pages.User.ProfileEditModel
 @{
-    ViewData["Title"] = "Edit User Details";
+    ViewData[ViewDataFor.Title] = "Edit User Details";
 }
 
 @*https://getbootstrap.com/docs/5.3/forms/layout/*@
