--- a/Sample.Hosted/Pages/_ViewImports.cshtml
+++ b/Sample.Hosted/Pages/_ViewImports.cshtml
@@ -1,6 +1,9 @@
 @using DRN.Framework.Utils.Settings
 @using DRN.Framework.Utils.Scope
 @using Sample.Hosted.Pages
+@using Sample.Hosted.Pages.Shared.Models
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Sample.Hosted.Settings
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, DRN.Framework.Hosting
 @addTagHelper *, Sample.Hosted
