User Profile pages refactored with Subnavigation

--- a/Sample.Hosted/Pages/Shared/_Navbar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Navbar.cshtml
@@ -29,7 +29,7 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end bg-primary dropdown-menu-dark border-0" aria-labelledby="navbarDropdown">
                             <li>
-                                <a class="dropdown-item" href="@PageFor.User.Profile">My Profile</a>
+                                <a class="dropdown-item" href="@PageFor.UserProfile.Details">My Profile</a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider">
