--- a/Sample.Hosted/Pages/Shared/_Sidebar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Sidebar.cshtml
@@ -44,7 +44,7 @@
             <ul class="dropdown-menu text-small shadow">
                 <li><a class="dropdown-item" href="#">New project...</a></li>
                 <li><a class="dropdown-item" href="#">Advanced</a></li>
-                <li><a class="dropdown-item" href="@PageFor.User.Profile">My Profile</a></li>
+                <li><a class="dropdown-item" href="@PageFor.UserProfile.Details">My Profile</a></li>
                 <li>
                     <hr class="dropdown-divider">
                 </li>
