--- a/Sample.Hosted/Pages/User/Profile/Picture.cshtml
+++ b/Sample.Hosted/Pages/User/Profile/Picture.cshtml
@@ -1,6 +1,6 @@
 @page
 @using Sample.Hosted.TagHelpers
-@model Sample.Hosted.Pages.User.ProfilePictureModel
+@model Sample.Hosted.Pages.User.Profile.ProfilePictureModel
 @{
     ViewData[ViewDataFor.Title] = "Profile Picture";
 }
@@ -34,7 +34,7 @@
             <!-- Upload and Cancel Buttons -->
             <div class="col-auto mt-3">
                 <button type="submit" class="btn btn-primary">Upload Picture</button>
-                <a asp-page="@PageFor.User.Profile" class="btn btn-secondary">Cancel</a>
+                <a asp-page="@PageFor.UserProfile.Details" class="btn btn-secondary">Cancel</a>
             </div>
         </form>
     </div>
