--- a/Sample.Hosted/Pages/Shared/_SidebarCollapsible.cshtml
+++ b/Sample.Hosted/Pages/Shared/_SidebarCollapsible.cshtml
@@ -77,7 +77,7 @@
                         <a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">New...</a>
                     </li>
                     <li>
-                        <a href="@PageFor.User.Profile" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Profile</a>
+                        <a href="@PageFor.UserProfile.Details" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Profile</a>
                     </li>
                     <li>
                         <a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Settings</a>
