--- a/Sample.Hosted/Pages/Shared/_SubNavigation.cshtml
+++ b/Sample.Hosted/Pages/Shared/_SubNavigation.cshtml
@@ -1,18 +1,24 @@
 @{
+    var subNavigation = ViewData[ViewDataFor.SubNavigation] as SubNavigationCollection;
 }
-<div>
-    <ul class="nav nav-tabs justify-content-center">
-        @foreach (var navItem in DefaultSubNavigationCollection.DefaultItems)
-        {
-            <li class="nav-item">
-                <a href="@navItem.Href" active-page="@navItem.Href" aria-current="page"
-                   class="nav-link link-dark d-flex align-items-center pb-2 mt-1 border-bottom  rounded-0">
-                    <i class="bi @navItem.Icon me-2" style="font-size: 1.25rem;"
-                       role="img" aria-label="@navItem.Title">
-                    </i> @navItem.Title
-                </a>
-            </li>
-        }
-    </ul>
-</div>
+
+@if (subNavigation?.Items.Count > 0)
+{
+    <div>
+        <ul class="nav nav-tabs justify-content-center">
+            @foreach (var navItem in DefaultSubNavigationCollection.DefaultItems)
+            {
+                <li class="nav-item">
+                    <a href="@navItem.Href" active-page="@navItem.Href" aria-current="page"
+                       class="nav-link link-dark d-flex align-items-center pb-2 mt-1 border-bottom  rounded-0">
+                        <i class="bi @navItem.Icon me-2" style="font-size: 1.25rem;"
+                           role="img" aria-label="@navItem.Title">
+                        </i> @navItem.Title
+                    </a>
+                </li>
+            }
+        </ul>
+    </div>
+}
+
 
