--- a/Sample.Hosted/Pages/User/Profile/Edit.cshtml
+++ b/Sample.Hosted/Pages/User/Profile/Edit.cshtml
@@ -2,6 +2,7 @@
 @model Sample.Hosted.Pages.User.Profile.ProfileEditModel
 @{
     ViewData[ViewDataFor.Title] = "Edit User Details";
+    ViewData[ViewDataFor.SubNavigation] = SubNavigationFor.ProfileSubNavigationCollection;
 }
 
 @*https://getbootstrap.com/docs/5.3/forms/layout/*@
