Sidebar Action menu  + Footer navigations added

--- a/Sample.Hosted/Pages/Shared/_Layout.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Layout.cshtml
@@ -66,6 +66,10 @@ https://getbootstrap.com/docs/5.3/examples/sidebars/
             @await RenderSectionAsync("MainBottom", required: false)
         </div>
     </div>
+    @if (ScopeContext.MFACompleted)
+    {
+        <partial name="_SidebarActionMenu"/>
+    }
 </div>
 
 <partial name="_Footer"/>
