--- a/Sample.Hosted/Pages/Shared/_Footer.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Footer.cshtml
@@ -1,7 +1,7 @@
 @using DRN.Framework.Hosting.Consent
 
 @{
-    var showBanner = !ConsentContext.ConsentCookie.Values.UserResponded;
+    var showCookieAlertBanner = !ConsentContext.ConsentCookie.Values.UserResponded;
 }
 
 <footer class="border-top footer text-muted mt-auto ">
@@ -10,6 +10,25 @@
             &copy @DateTime.Now.Year - @ScopeContext.Settings.ApplicationName
         </div>
         <div id="FooterMiddle">
+            <div id="footerNavBar" class="d-none align-items-center">
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="nav-link py-0" href="#">Privacy</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link py-0" href="#">Terms</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link py-0" href="#">Security</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link py-0" href="#">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link py-0" href="#">FAQ</a>
+                    </li>
+                </ul>
+            </div>
             <div id="preferenceCookieAlert" class="d-none align-items-center" role="alert">
                 <span class="me-3">We use cookies to enhance your experience. <a href="/Privacy" class="alert-link">Learn more</a>.</span>
                 <button type="button" class="btn btn-primary btn-sm accept-policy me-2" aria-label="Accept" id="acceptPreferencesCookieBtn">
@@ -24,7 +43,8 @@
             <div id="preferenceManagementContainer" class="d-flex align-items-center">
                 <div class="dropup">
                     <!-- Main button for opening the cookie manager dropdown -->
-                    <button class="btn btn-sm btn-light dropdown-toggle" type="button" id="PreferenceManager" data-bs-toggle="dropdown" aria-expanded="false" aria-label="Preference Manager">
+                    <button class="btn btn-sm btn-light dropdown-toggle" type="button" id="PreferenceManager" data-bs-toggle="dropdown" aria-expanded="false"
+                            aria-label="Preference Manager">
                         Preferences <i class="bi bi-sliders"></i>
                     </button>
 
@@ -75,31 +95,42 @@
     const getPreferenceCookieWithDecode = () => JSON.parse(urlSafeBase64Decode(getPreferenceCookie()));
     let globalPreferences = getPreferenceCookieWithDecode();
 
+    const footerNavBar = "footerNavBar";
     const preferenceCookieAlert = "preferenceCookieAlert";
     const analyticsCookiesCheckBoxId = "analyticsCookiesCheckBox";
     const marketingCookiesCheckBoxId = "marketingCookiesCheckBox";
     const acceptPreferenceCookieBtn = "acceptPreferencesCookieBtn";
     const rejectPreferenceCookieBtn = "rejectPreferencesCookieBtn";
     const savePreferencesBtnId = "savePreferencesBtn";
-
+    
     const savePreferences = (preferences) => {
         globalPreferences = preferences;
         const preferencesAsJson = JSON.stringify(preferences);
         const preferencesJsonAsEncoded = urlSafeBase64Encode(preferencesAsJson);
         const oneYearInSeconds = 365 * 24 * 60 * 60; // Set the cookie to expire in 1 year using Max-Age
         document.cookie = `${preferencesCookieName}=${preferencesJsonAsEncoded}; path=/; Max-Age=${oneYearInSeconds}; SameSite=Strict;`;
-        document.getElementById(preferenceCookieAlert).classList.replace("d-flex", "d-none");// Hide the alert banner
+        document.getElementById(preferenceCookieAlert).classList.replace("d-flex", "d-none");
+        adjustFooterVisibility(false);
         loadPreferences();
     }
     const loadPreferences = () => {
         document.getElementById(analyticsCookiesCheckBoxId).checked = globalPreferences.AnalyticsConsent || false;
         document.getElementById(marketingCookiesCheckBoxId).checked = globalPreferences.MarketingConsent || false;
     }
+    const adjustFooterVisibility = (showCookieAlertBanner) => {
+        if (showCookieAlertBanner) {
+            document.getElementById(footerNavBar).classList.replace("d-flex", "d-none");
+            document.getElementById(preferenceCookieAlert).classList.replace("d-none", "d-flex");
+        } else {
+            document.getElementById(footerNavBar).classList.replace("d-none", "d-flex");
+            document.getElementById(preferenceCookieAlert).classList.replace("d-flex", "d-none");
+        }
+    }
     const createPreferences = (analyticsConsent, marketingConsent) => ({
         @nameof(ConsentCookieValues.AnalyticsConsent): analyticsConsent,
         @nameof(ConsentCookieValues.MarketingConsent): marketingConsent
     });
-
+    
     loadPreferences();
     document.getElementById(acceptPreferenceCookieBtn).addEventListener("click", () => savePreferences(createPreferences(true, true)));
     document.getElementById(rejectPreferenceCookieBtn).addEventListener("click", () => savePreferences(createPreferences(false, false)));
@@ -108,8 +139,6 @@
         const marketing = document.getElementById(marketingCookiesCheckBoxId).checked;
         savePreferences(createPreferences(analytics, marketing));
     });
-
-    const showCookieAlertBanner =  @Json.Serialize(showBanner);
-    if (showCookieAlertBanner)
-        document.getElementById(preferenceCookieAlert).classList.replace("d-none", "d-flex");
+    
+    adjustFooterVisibility(@Json.Serialize(showCookieAlertBanner));
 </script>
