--- a/Sample.Hosted/Pages/Shared/_Layout.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Layout.cshtml
@@ -68,7 +68,7 @@ https://getbootstrap.com/docs/5.3/examples/sidebars/
     </div>
     @if (ScopeContext.MFACompleted)
     {
-        <partial name="_SidebarActionMenu"/>
+        <partial name="_SidebarActionbar"/>
     }
 </div>
 
