--- a/Sample.Hosted/Pages/Shared/_Sidebar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Sidebar.cshtml
@@ -6,6 +6,7 @@
     var sideBarWidth = isSlim ? "width: 4.5rem;" : "max-width: 200px;";
     var iconStyle = isSlim ? string.Empty : "me-2";
     var settingsText = isSlim ? string.Empty : " Settings";
+    var settingsTitle = isSlim ? "Settings" : string.Empty;
     var index = 0;
     var navigationCount = DefaultSidebarNavigationCollection.DefaultItems.Count;
 }
@@ -13,16 +14,14 @@
 <div class="d-flex p-1 bg-body-tertiary">
     <div class="d-flex flex-column align-items-center" style="@sideBarWidth">
         <ul class="nav nav-pills nav-flush flex-column mb-auto">
-
             @foreach (var navItem in DefaultSidebarNavigationCollection.DefaultItems)
             {
                 var titleAsText = isSlim ? string.Empty : navItem.Title;
                 var titleAsTooltip = isSlim ? navItem.Title : string.Empty;
-
                 var borderBottom = ++index == navigationCount ? "border-bottom" : "";
                 <li class="nav-item">
                     <a href="@navItem.Href" active-page="@navItem.Href" aria-current="page"
-                       class="nav-link  d-flex align-items-center py-2 @borderBottom border-top rounded-0"
+                       class="nav-link d-flex align-items-center py-2 @borderBottom border-top rounded-0"
                        title="@titleAsTooltip" data-bs-toggle="tooltip" data-bs-placement="right">
                         <i class="bi @navItem.Icon @iconStyle" style="font-size: 1.25rem;"
                            role="img" aria-label="@navItem.Title">
@@ -31,23 +30,26 @@
                 </li>
             }
         </ul>
-
-        <div class="dropdown dropup">
-            <a href="#"
-               class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle"
-               data-bs-toggle="dropdown" aria-expanded="false">
-                <h4 class="bi bi-gear-fill">@settingsText</h4>
-            </a>
-            <ul class="dropdown-menu text-small shadow">
-                <li><a class="dropdown-item" href="#">New project...</a></li>
-                <li><a class="dropdown-item" href="#">Advanced</a></li>
-                <li><a class="dropdown-item" href="@PageFor.UserProfile.Details">My Profile</a></li>
-                <li>
-                    <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="@PageFor.User.Logout">Log out</a></li>
-            </ul>
-        </div>
+        
+        <ul id="SidebarSettings" class="nav nav-pills nav-flush flex-column">
+            <li id="SidebarSettingsItem" class="nav-item">
+                <div class="dropup" title="@settingsTitle" data-bs-toggle="tooltip" data-bs-placement="right">
+                    <a class="btn nav-link d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle p-2 border-top rounded-0"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        <span class="bi bi-gear-fill" style="font-size: 1.25rem;">@settingsText</span>
+                    </a>
+                    <ul class="dropdown-menu text-small shadow">
+                        <li><a class="dropdown-item" href="#">New project...</a></li>
+                        <li><a class="dropdown-item" href="#">Advanced</a></li>
+                        <li><a class="dropdown-item" href="@PageFor.UserProfile.Details">My Profile</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="@PageFor.User.Logout">Log out</a></li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
     </div>
 </div>
 
